[tool.black]
line-length = 120
target-version = ['py310']

[tool.poetry]
name = "gh-stats"
version = "0.0.1"
description = "Compiler Explorer GitHub stats"
authors = ["Matt Godbolt <matt@godbolt.org>", "partouf <partouf@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
pygithub = "^1.57"
click = "^8.1.3"
